[package]
name = "chat-server-2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10.64"
rand = "0.8.5"
sqlite = "0.36.0"

[dependencies.async-std]
version = "1.12.0"
features = ["attributes"]
